css/main.scss
---
# Main stylesheet
---
@charset "utf-8";

// Base variables
$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
$base-font-size:   16px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.6;

$spacing-unit:     30px;

$text-color:       #333;
$background-color: #fdfdfd;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;

// Basic reset
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

// Base styles
body {
  font-family: $base-font-family;
  font-size: $base-font-size;
  font-weight: $base-font-weight;
  line-height: $base-line-height;
  color: $text-color;
  background-color: $background-color;
  -webkit-text-size-adjust: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 600;
  margin-top: $spacing-unit;
  margin-bottom: $spacing-unit / 2;
}

h1 { font-size: 2em; }
h2 { font-size: 1.5em; }
h3 { font-size: 1.25em; }

p, ul, ol {
  margin-bottom: $spacing-unit / 2;
}

a {
  color: $brand-color;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

// Layout
#contain {
  max-width: $content-width;
  margin: 0 auto;
  padding: 0 $spacing-unit;
}

#content {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

#base {
  flex: 1;
  padding: $spacing-unit 0;
}

// Header
.site-header {
  border-bottom: 1px solid $grey-color-light;
  padding: $spacing-unit 0;
  margin-bottom: $spacing-unit;
}

.site-title {
  font-size: 1.5em;
  font-weight: 600;
  color: $text-color;

  &:hover {
    text-decoration: none;
  }
}

.site-nav {
  float: right;
  line-height: 2.5;

  .page-link {
    color: $text-color;
    margin-left: 20px;

    &:hover {
      text-decoration: none;
      color: $brand-color;
    }
  }
}

// Footer
.site-footer {
  border-top: 1px solid $grey-color-light;
  padding: $spacing-unit 0;
  margin-top: $spacing-unit * 2;
}

.footer-col-wrapper {
  display: flex;
  justify-content: space-between;
  color: $grey-color;
  font-size: $small-font-size;
}

.contact-list,
.social-media-list {
  list-style: none;
}

.icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;

  svg {
    vertical-align: top;
  }
}

// Home page
#home {
  section {
    margin-bottom: $spacing-unit * 2;
  }

  #hero {
    h1 {
      font-size: 2.5em;
      line-height: 1.3;
      margin: $spacing-unit * 2 0;

      em {
        font-style: normal;
        color: $brand-color;
      }
    }
  }
}

// Blog
.post-list {
  list-style: none;
  margin-bottom: $spacing-unit * 2;

  li {
    margin-bottom: $spacing-unit / 3;
  }

  a {
    font-size: 1em;
  }
}

.post-header {
  margin-bottom: $spacing-unit;

  .post-title {
    font-size: 2em;
    margin-bottom: $spacing-unit / 4;
  }

  .post-meta {
    color: $grey-color;
    font-size: $small-font-size;
  }
}

.post-content {
  h2 {
    font-size: 1.75em;
  }

  h3 {
    font-size: 1.375em;
  }

  h4 {
    font-size: 1.125em;
  }
}

// Code
pre, code {
  font-family: "Menlo", "Monaco", "Consolas", monospace;
  font-size: 0.9em;
  background-color: #f5f5f5;
  border-radius: 3px;
}

code {
  padding: 2px 4px;
}

pre {
  padding: $spacing-unit / 2;
  overflow-x: auto;

  code {
    padding: 0;
    background-color: transparent;
  }
}

// Responsive
@media screen and (max-width: $on-palm) {
  .site-nav {
    float: none;
    text-align: center;

    .page-link {
      margin: 0 10px;
    }
  }

  #home #hero h1 {
    font-size: 1.75em;
  }

  .footer-col-wrapper {
    flex-direction: column;
  }
}

